SERVER-68788 Coverity analysis defect 122654: Using a moved object